# tron

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: observed.jsonl  policy.json
src/tron/: __init__.py  cli.py  grid.py
tests/: test_grid.py
